[project]
name = "mpl_utils"
version = "0.5.3"
description = "Various utilities for matplotlib"
authors = [
    {name = "Anton Golovanov"},
]
dynamic = ["dependencies"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mpl_utils*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }